canary-version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shop-v2
  namespace: canary-deployment
  labels:
    app: online-shop
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: online-shop
      version: v2
  template:
    metadata:
      labels:
        app: online-shop
        version: v2
    spec:
      containers:
      - name: online-shop
        image: amitabhdevops/online_shop
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
