ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-ingress
  namespace: canary-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Optional, if you don't have SSL
spec:
  ingressClassName: nginx
  rules:
  - host: localhost  # Use localhost for local testing
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: online-shop-service  # Service name pointing to the v1 (stable) deployment
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-canary-ingress
  namespace: canary-deployment
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"  # This marks this as a canary Ingress
    nginx.ingress.kubernetes.io/canary-weight: "10"  # 10% of traffic to the canary version
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost  # Same localhost to split traffic for local setup
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: online-shop-service  # Service name pointing to the v2 (canary) deployment
            port:
              number: 80
